assets/css/styles.css
/** I used Bootstrap framework  to create this Portfolio.  I tweaked it here and there.  **/
/*
 * Globals
 */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
}

/* Links */
a,
a:focus,
a:hover {
  color: #fff;
}

/* Custom default button */
.btn-default,
.btn-default:hover,
.btn-default:focus {
  color: #333;
  text-shadow: none;
  /* Prevent inheritance from `body` */
  background-color: #fff;
  border: 1px solid #fff;
}

/*
 * Base structure
 */
body {
  position: relative;
  text-align: center;
  background-color: #dceef9;
  width: 100%;
  height: 100%;
  padding: 0;
  margin: 0;
  /* background-color: darkgreen; */
}

.content {
  /* position: relative; */
  width: 100%;
  height: 100%;
  vertical-align: middle;
  margin: auto;
  min-height: 100vh
    /* background-color: darkgray; */
}

/* Header */
header {
  position: fixed;
  top: 0;
  width: 100%;
  padding: 15px 0;
  background-color: rgba(0, 0, 0, 1);
  transition: background-color 0.5s, padding 1s;
}

header.sticky {
  background-color: rgba(0, 0, 0, 0.9);
  padding: 0;
}


/* .content {
  height: 100vh;
  margin-top: 30px;
} */

nav {
  display: flex;
  justify-content: space-around;
  padding: 20px 20px;
  text-align: center;
}

nav a:link,
nav a:visited {
  color: #fff;
  font-size: 0.9em;
  text-transform: uppercase;
  text-decoration: none;
  padding: 5px;
}

nav a:hover,
nav a:active {
  color: #aaa;
  transform: scale(1.1);
}

section .content-section {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.8rem;
  background-size: cover;
  background-position: center;
}



#home {
  background-image: linear-gradient(45deg,
      #fff,
      rgba(0, 0, 0, 0.7),
      rgba(0, 0, 0, 1));
}

#bio>h2 {
  background-color: tranparent;
}

#bio>h2 {
  background-image: linear-gradient(45deg,
      #000,
      rgba(0, 0, 0, 0.8),
      rgba(0, 0, 0, 0.4),
      #000);
}

#projects {
  background-image: linear-gradient(45deg,
      #fff,
      rgba(0, 0, 0, 0.7),
      rgba(0, 0, 0, 1));
}

/* .navigation {
  width: 100%;
  position: relative;
  padding: 0;
  margin: 1% 0 0 0;
  height: auto;
  max-width: 23em;
} */

/* .navigation.link {
  display: block;
  color: #ddd;
  text-decoration: none;
  padding: 1em;
  font-weight: 400;
} */

/* .navigation:hover {
  background-color: #aaa;
}

.navigation.active {
  color: white;
  background-color: rgba(0, 0, 0, 0.1);
} */

/* 
.masthead-brand {
  margin-top: 10px;
  margin-bottom: 12px;
}

.navbar-default {
  background-color: #000 !important;
  border-color: #e7e7e7;
} */

/* .masthead-nav>li>a {
  list-style: none;
  display: inline-flex;
  justify-content: space-evenly;
  padding: 0;
  margin: auto;
  font-size: 1.5em;
  font-weight: 500;
  color: aliceblue;
  cursor: pointer;
} */

/* .masthead-nav>li>a:hover,
.masthead-nav>li>a:focus {
  background-color: transparent;
  border-bottom-color: #a9a9a9;
  border-bottom-color: rgba(255, 255, 255, .25);
} */



/* #ulMasthead {
  width: 100%;
  background: #000;
  color: #fff;
  margin: 1% 0 0 0;
  padding: 0;
  min-height: 12em;
  max-width: 100%;
  padding: 0;
  z-index: 10;
  border: 3px solid;
} */

/* .masthead {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 10;
  padding: 0;
  margin: 0;
  height: auto;
  max-width: 100%;
  background-color: #000;
} */


@media (min-width: 768px) {
  /* .masthead-brand {
    margin: auto;
  } */

  /* .navigation {
    float: right;
  } */
}

/*
 * Cover
 */
/* .cover { */
/* position: relative */
/* 9/30 */
/* } */

/** end of bootstrap styling except of media-queries **/
/** =========================================== **/
/** ===========================================
=========================================== **/
/** Custom styling for Home page **/
/** Decorative Leaf logo **/
/* .fa.fa-leaf {
  color: lightgreen;
  font-weight: 700;
}

.fa-leaf:before {
  content: "\f06c";
  border: 8px solid red;
  border-radius: 50%;
  background: darkorange;
} */

/** My name on Home page "index.html" **/
/* h1 {
  font-size: 6em;
  font-family: "Lato", Verdana, sans-serif;
  color: rgb(55, 69, 30);
} */

/* ul.divide {
  display: inline-flex;
  margin: auto;
  padding: 0;
} */

/* .title {
  font-size: 4.5em;
  padding: 10px;
  margin-top: 20px;
  color: rgb(49, 62, 27);
} */

/* .links {
  margin-top: 65px;
  font-size: 25px;
} */

/** Links **/
/* .fa.fa-github {
  color: lightgreen;
  padding-right: 10px;
}

.fa.fa-linkedin {
  color: lightgreen;
}

.fa.fa-envelope {
  color: lightgreen;
  padding-left: 10px;
} */

/** end of custom styling for Home page **/
/** =========================================== **/
/** ===========================================
=========================================== **/
/** Custom styling for Bio page **/
/**  Bio.html view **/
#bio {
  width: 100%;
  height: 100%;
  overflow: auto;
  margin: auto;
}

/** Self explanatory **/
.bio-paragraph {
  vertical-align: middle;
  text-align: center;
  font-size: 2.3em;
  letter-spacing: 1px;
  font-family: "Lato", Verdana, sans-serif;
  padding-top: 6em;
  color: darkolivegreen;
  word-wrap: break-word;
}

/** SVG image **/
.img-responsive {
  margin: auto;
  width: 100% \9;
  height: auto;
  padding-top: 1em;
  padding-bottom: 1em;
}

/** Resume button **/
/* #resume {
  padding-top: 2em;
  padding-bottom: 5em;
} */
/** end of custom styling for Bio page **/
/** =========================================== **/
/** Bio and Projects page styling **/
/* .container-fluid {
  height: 100%;
  display: inline-block;
  overflow: hidden;
} */

/* #projects {
  width: 100%;
} */

/** end of custom styling for Projects page

/** Bootstrap Media-queries **/
/*
 * Affix and center
 */
@media(max-width: 320px) {
  /* .masthead-brand {
    margin-top: 2px;
    margin-bottom: 4px;
  } */

  /* .container-fluid {
    margin-top: 30px;
    height: 100%;
    vertical-align: middle;
  } */

  .bio-paragraph {
    /* padding-top: 0; */
    /* padding-bottom: 4em; */
    font-size: 1.3em;
    font-family: 'Lato', Verdana, sans-serif;
    color: darkolivegreen;
  }

  /* .img-responsive {
    padding-top: 0;
  } */

  /* #resume{
  padding-top: 0;
  } */
}

@media (min-width: 440px) {
  /* .container-fluid {
    margin: 30px, auto;
  } */

  /* .img-responsive {
    padding-top: 1.5em;
    padding-bottom: 1em;
  } */

  /* .bio-paragraph {
    font-size: 1.5em;
  } */
}

@media (min-width: 768px) {

  /* Pull out the header and footer */
  /* .masthead {
    top: 5px;
  }

  .cover {
    margin: 45% auto;
    position: relative */
  /* 9/30 */
}

/* .container-fluid {
    margin: auto;
  } */

/* .bio-paragraph {
  padding-bottom: 1em;
} */

/* Handle the widths */
/* .masthead,
  .mastfoot,
  .cover-container {
    width: 100%; */
/* Must be percentage or pixels for horizontal alignment */
/* } */


@media (min-width: 992px) {

  /* .masthead,
  .mastfoot,
  .cover-container {
    margin: 2% auto;
    height: auto; */
  /* 9/30 */
}

/* .cover {
    margin: 16%; */

/* } */


/* h1 {
    color: darkolivegreen;
  } */

/* .bio-paragraph {
    font-size: 2em;
    padding-bottom: 1em;
    word-break: break-word;
    width: 84%;
    margin: auto;
  } */

#repository {
  padding-top: 0;
  font-family: "Lato", Verdana, sans-serif;
  color: darkolivegreen;
}

.github {
  padding-bottom: 9em;
}

@media screen and (max-width: 768px) {
  /* h1 {
    margin-top: 1.2em;
  } */
}

